# TheStoryTest

./: .gitignore  .npmignore  .pypirc.example  ASSEMBLY_STRUCTURE.md  CHANGELOG.md  DEPENDENCY_FIX_SUMMARY.md  DYNAMIC_VALIDATION.md  GIT_REINITIALIZATION.md  GIT_SYNC_COMPLETE.md  MANIFEST.in  MANUAL_SYNC.md  MENTAL_MODEL_INTEGRATION.md  MIGRATION_SUMMARY.md  OPTIMIZATION_RECOVERY_REPORT.md  PACKAGE_CONVERSION_PLAN.md  PACKAGE_JSON_GUIDE.md  PHASE1_COMPLETE.md  PHASE2.5_COMPLETE.md  PHASE2.5_WORKFLOW_FIXES.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE3.5_RUNTIME_RESTORATION.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PORTFOLIO_GAMEJAM_USAGE.md  PR5_RELEASE_REVIEW.md  PYPI_PACKAGE_SUMMARY.md  PYPI_READY.md  QUICKSTART.md  README.PyPI.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_v1.3.1.md  STRENGTHENING_SUMMARY.md  TheStoryTest.code-workspace  TheStoryTest.sln.DotSettings  TinyWalnutGames.TheStoryTest.Acts.Player.csproj~  TinyWalnutGames.TheStoryTest.Acts.csproj~  (+26 more)
.github/: BRANCH_PROTECTION_GUIDE.md  DEPENDENCY_MANAGEMENT.md  FIXES_CHANGELOG.md  PLATFORM_FIX.md  README.md  THREE_BRANCH_WORKFLOW.md  WORKFLOWS.md  WORKFLOW_FIXES.md  actionlint.yaml  copilot-instructions.md  story-test-report-stub.json
.junie/: Junie Session.testsession  guidelines.md
.unity-cache-server/: README.md  check-status.ps1  config.yml  configure-unity.md  force-enable.ps1  start.ps1
Assets/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
docs/: AUTOMATION_SUMMARY.md  PYPI_PUBLISHING.md  README.md  RELEASE-MATRIX.md  RELEASE_PROCESS.md  acts-12-13-guide.md  acts.md  ci-cd.md  configuration.md  getting-started.md  mental-model-validation.md  python-validator.md
scripts/: build_pypi.ps1  release.ps1  release.sh  render_test.py  story_test.py  story_test_unity_safe.py  switch_to_windows_build.ps1  sync_dependencies.py  sync_reality.py  sync_versions.py
storytest/: __init__.py  cli.py  mental_model_reporter.py  python_validator.py  validator.py
storytest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: mental-model.spec.ts  (+1 more)
(+90 files in other folders)
